Add restore from a backup to the first-time dialog Rework first-time dialog to use vertically aligned buttons.

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -226,6 +226,7 @@ label.nopredictedvscorrect=No hay diferencias entre silabificaciónes predichos y
 label.restoreproject=Restaurar un proyecto
 label.createnewproject=Crear proyecto nuevo
 label.openexistingproject=Abrir proyecto
+label.restorefrombackup=Restaurar un proyecto desde una respalda
 label.clearwords=Remover todas las palabras\nFavor de respaldar los datos antes de hacer esto.
 label.clearcorrectsyllabificationinwords=Eliminar todos los formularios de silabificación correcta en todas las palabras de la lista de palabras\nFavor de respaldar los datos antes de hacer esto.
 label.areyousure=¿Estas seguro?
