--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -237,6 +237,7 @@ label.wordtotry=Mot essayer:
 label.yes=Oui
 label.createnewproject=Créer nouveau projet
 label.openexistingproject=Ouvrir projet existant 
+label.restorefrombackup=Restore a project from a backup
 label.clearwords=Enlever tous les mots de la liste.\nOn suggère de faire une sauvegarde avant de faire ceci.
 label.clearcorrectsyllabificationinwords=Enlever tous les syllabifications correctes de tous les mots dans la liste.\nOn suggère de faire une sauvegarde avant de faire ceci.
 label.areyousure=Vous êtes sûr de vouloir faire ceci?
