Add language name field to writing system / language

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -185,6 +185,7 @@ label.correctsyllabification=Silabificación Correcta
 label.discussion=Discussión
 label.backupcomment=Teclar una descripción para este backup:
 label.icurules=Reglas de la UCI para usar:
+label.languagename=Nombre del idioma:
 label.languagetouse=Idioma a utilizar:
 label.importing=Importar: 
 label.importingcanceled=Es: Importing canceled!
