--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -189,6 +189,7 @@ label.backupnowbeforeimport=Voulez-vous faire une sauvegarde maintenant?\n(Oui v
 label.graphemenaturalclass=Graphème classe naturelle 
 label.graphemesandnaturalclasses=Gra. ou NC 
 label.graphemeornaturalclass=Graphème ou classe naturelle 
+label.languagename=Language name:
 label.languagetouse=Language to use :
 label.name=Nom
 label.naturalclasses=Classes naturelles
