Add checks in sonority hierarchy for missing and/or duplicate segments

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -495,3 +495,7 @@ language.sortingoption.custom_icu_rules=Custom ICU rules
 language.sortingoption.default_order=Default order
 language.sortingoption.same_as_another_language=Same as another language
 language.sortingoption.use_ldml_file=Use LDML file
+
+# Sonority Hierarchy errors
+sonorityhierarchyerror.duplicatesegmentsinhierarchy=The following segments are duplicated in some classes.\nEach segment should appear in one and only one class.
+sonorityhierarchyerror.missingsegmentsinhierarchy=The following segments are in the segment inventory but are not in any class.\nEvery segment should appear in one and only one class.
