--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -495,3 +495,7 @@ language.sortingoption.custom_icu_rules=Reglas personalizadas de la UCI
 language.sortingoption.default_order=Orden predeterminada
 language.sortingoption.same_as_another_language=Igual que en otro idioma
 language.sortingoption.use_ldml_file=Usar archivo LDML
+
+# Sonority Hierarchy errors
+sonorityhierarchyerror.duplicatesegmentsinhierarchy=Los siguientes segmentos están duplicados en algunas clases.\nCada segmento debe aparecer en una y sólo una clase.
+sonorityhierarchyerror.missingsegmentsinhierarchy=Los siguientes segmentos están en el inventario de segmentos pero no están en ninguna clase.\nCada segmento debe aparecer en una y sólo una clase.
