Allow onset repair filters to include context from previous syllable.

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -476,6 +476,7 @@ templatefilter.type.wordinitial=Palabra inicial
 
 #Template/Filter messages
 templatefiltersyntaxerror.all_slots_optional=Todas las máquinas tragamonedas son opcionales; Necesita al menos un espacio obligatorio.
+templatefiltersyntaxerror.extra_constituent_begin_marker_indicator=Sólo se permite un marcador de inicio de constituyente _; por favor, quiten los extras.
 templatefiltersyntaxerror.extra_slot_position_indicator=Solo un indicador de posición de ranura | esta permitido; por favor elimine cualquier extra.
 templatefiltersyntaxerror.missing_class_after_opening_square_bracket=Falta una clase; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_class_or_segment=Una clase o un segmento falta; detectado en o alrededor de la posición {0}.
