--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -479,6 +479,7 @@ templatefilter.type.wordinitial=Word initial
 
 #Template/Filter messages
 templatefiltersyntaxerror.all_slots_optional=All the slots are optional; you need at least one obligatory slot.
+templatefiltersyntaxerror.extra_constituent_begin_marker_indicator=Only one constituent begin marker _ is allowed; please remove any extras.
 templatefiltersyntaxerror.extra_slot_position_indicator=Only one slot position indicator | is allowed; please remove any extras.
 templatefiltersyntaxerror.missing_class_after_opening_square_bracket=A class is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_class_or_segment=A class or a segment is missing; detected at or about position {0}.
