Add word filters, pass 1

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -48,6 +48,13 @@ menu.convertpredictedtocorrect=_Convertir la predicho para corregir silabificaci
 menu.findword=_Encontrar la palabra
 menu.clearwords=_Remover todas las palabras
 menu.clearcorrectsyllabificationinwords=Remover _silabificación correcta en todas las palabras
+menu.filterwords=Filtrar las palabras
+menu.filterpredictedwords=Filtrar las silabificaciones predicadas
+menu.filtercorrectwords=Filtrar las silabificaciones correctas
+menu.filterremoveallfilters=Eliminar todos los filtros
+menu.filterremovefiltercorrectwords=Eliminar el filtro de las silabificaciones correctas
+menu.filterremovefilterpredictedwords=Eliminar el filtro de las silabificaciones predicadas 
+menu.filterremovefilterwords=Eliminar el filtro de las palabras
 menu.compareimplementations=Comparar _implementaciones
 menu.compareapproachsyllabifications=Comparar los resultados de sílabas entre los enfoques
 menu.view=_Vista
@@ -160,6 +167,7 @@ label.active=Usa
 label.no=No
 label.ok=OK
 label.yes=Sí
+label.entertexttosearchfor=Escriba el texto para buscar
 label.segmentsandnaturalclasses=Seg. o CN
 label.graphemenaturalclass=Clase Natural de Grafemas
 label.graphemesandnaturalclasses=Gra. o CN
@@ -197,11 +205,15 @@ label.backupnowbeforeimport=¿Quieres hacer una copia de seguridad ahora? \n(Sí l
 label.environmentrepresentation=Entorno
 label.environments=Entornos
 label.errorinicurules=Error en las reglas de la UCI en el signo de exclamación (!)
+label.errorinregularexpression=Error encontrado en la expresión regular en el caret (^)
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
 label.filterrepresentation=Ranuras
 label.filters=Filtros
 label.filtertype=Alcance
+label.filtercorrectsyllablebreaks=Filtrar Silabificación Correcta
+label.filterpredictedsyllablebreaks=Filtrar Silabificación Predicada
+label.filterwords=Filtrar Palabras
 label.syllabifying=Silabificar: 
 label.parserresult=Resultado del analizador
 label.parsertree=Diagrama de árbol
@@ -356,6 +368,10 @@ tooltip.remove=Remover Ítem   Ctrl+D
 tooltip.syllabifywords=Analizar todas las palabras   Ctrl+W
 tooltip.convertpredictedtocorrect=Convertir la predicho para corregir silabificación
 tooltip.findword=Encontrar la palabra   Ctrl+F
+tooltip.filtercorrectsyllablebreaks=Filtrar las silabificaciones correctas
+tooltip.filterpredictedsyllablebreaks=Filtrar las silabificaciones predicadas
+tooltip.filterwords=Filtrar las palabras
+tooltip.removeallfilters=Eliminar todos los filtros
 
 #Radio buttons
 radio.current=La implementación actual
@@ -365,6 +381,17 @@ radio.everysyllable=Every syllable must have an onset
 radio.onsetsnotrequired=Onsets are not required
 radio.repairaction=Reparar
 radio.failaction=Fallar
+radio.anywhere=En cualquier lugar
+radio.end=Al final
+radio.start=Al principio
+radio.wholeitem=Todo el artículo
+radio.regularexpression=Coincide con la expresión regular
+radio.blanks=Blancos
+radio.nonblanks=No blancos
+
+#Check boxes
+checkbox.matchcase=Coincide con las minúsculas o las mayúsculas
+checkbox.matchdiacritics=Coincide con los diacríticos
 
 # Differences reports
 report.cvtitle=Comparación del CV Approach
