--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -48,6 +48,13 @@ menu.convertpredictedtocorrect=_Converti prédit en syllabification correcte
 menu.findword=_Trouver mot
 menu.clearwords=_Supprimer tous mots
 menu.clearcorrectsyllabificationinwords=Supprimer _ruptures de syllabes correctes dans tous mots
+menu.filterwords=Filter words
+menu.filterpredictedwords=Filter predicted syllable breaks
+menu.filtercorrectwords=Filter correct syllable breaks
+menu.filterremoveallfilters=Remove all filters
+menu.filterremovefiltercorrectwords=Remove filter correct syllable breaks
+menu.filterremovefilterpredictedwords=Remove filter predicted syllable breaks
+menu.filterremovefilterwords=Remove filter words
 menu.compareimplementations=Comparer _Implementations
 menu.compareapproachsyllabifications=Compare Syllabification Results between Approaches
 menu.view=_Affichage
@@ -159,14 +166,19 @@ label.cvsyllabificationfailure=Echec: impossible d\u2019analyser classes naturel
 label.date=Date
 label.description=Description
 label.discussion=Discussion
+label.entertexttosearchfor=Enter text to search for
 label.environmentrepresentation=Environnent
 label.environments=Environnements
 label.errorinicurules=Error in ICU rules at the exclamation mark (!)
+label.errorinregularexpression=Error found in the regular expression at the caret (^)
 label.exporting=Exportation en cours: 
 label.exportingcanceled=Exportation annulée!
 label.filterrepresentation=Slots
 label.filters=Filters
 label.filtertype=Scope
+label.filtercorrectsyllablebreaks=Filter correct syllable breaks
+label.filterpredictedsyllablebreaks=Filter predicted syllable breaks
+label.filterwords=Filter words
 label.filename=Nom de Fichier
 label.font=Police
 label.general=General
@@ -358,6 +370,10 @@ tooltip.remove=Enlever point   Ctrl+D
 tooltip.syllabifywords=Analyser tous mots   Ctrl+W
 tooltip.convertpredictedtocorrect=Convertir syllabification prédite en correcte
 tooltip.findword=Trouver mot   Ctrl+F
+tooltip.filtercorrectsyllablebreaks=Filter Correct Syllable breaks
+tooltip.filterpredictedsyllablebreaks=Filter Predicted Syllable breaks
+tooltip.filterwords=Filter Words
+tooltip.removeallfilters=Remove All Filters
 
 #Radio buttons
 radio.current=Implémentation actuel 
@@ -367,6 +383,17 @@ radio.everysyllable=Every syllable must have an onset
 radio.onsetsnotrequired=Onsets are not required
 radio.repairaction=Repair
 radio.failaction=Fail
+radio.anywhere=Anywhere
+radio.end=At end
+radio.start=At start
+radio.wholeitem=Whole item
+radio.regularexpression=Match for regular expression
+radio.blanks=Blanks
+radio.nonblanks=Non-blanks
+
+#Check boxes
+checkbox.matchcase=Match case
+checkbox.matchdiacritics=Match diacritics
 
 # Differences reports
 report.cvtitle=Comparaison d\u2019approche CV
