When finding a word, if a filter is hiding it, ask user if they want to remove all filters.

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -242,6 +242,8 @@ label.tryit=Try it
 label.untested=Untested
 label.vernacularwritingsystem=Vernacular Writing System
 label.word=Word
+label.wordhiddenbyfilter=The word '{0}' is hidden by filters.
+label.wordhiddenbyfiltersoremoveallfilters=Do you want to remove all filters?
 label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 label.comment=Comment
 label.words=Words
