--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -186,6 +186,8 @@ label.choosesegmnts=Seleccionar uno o más segmentos
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
 label.vernacularwritingsystem=Sistema de escritura vernáculo
 label.word=Palabra
+label.wordhiddenbyfilter=La palabra '{0}' está oculta por los filtros.
+label.wordhiddenbyfiltersoremoveallfilters=¿Quieres quitar todos los filtros?
 label.words=Palabras
 label.comment=Commentario
 label.predictedsyllabification=Silabificación Predicada
