--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -242,6 +242,8 @@ label.tryit=Essayer
 label.untested=Pas vérifié
 label.vernacularwritingsystem=Système d'écriture vernaculaire
 label.word=Mot
+label.wordhiddenbyfilter=The word '{0}' is hidden by filters.
+label.wordhiddenbyfiltersoremoveallfilters=Do you want to remove all filters?
 label.wordpredictedvscorrect=Syllabification prédite versus syllabification correcte
 label.comment=Comment
 label.words=Mots
