SYLP-51: Change spelling of ParaTExt to Paratext

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -14,19 +14,19 @@ menu.projectmanagementbackup=_Respaldar este proyecto...
 menu.projectmanagementrestore=R_estaurar un proyecto...
 menu.importsegments=I_mportar Segmentos
 menu.importflexphonemes=Importar segmentos (fonemás) desde _FLEx base de datos
-menu.importparatextcharacters=Importar segmentos (charácteres) desde _ParaTExt 7 archivo .lds
+menu.importparatextcharacters=Importar segmentos (charácteres) desde _Paratext 7 archivo .lds
 menu.importwords=_Importar Palabras
 menu.importplainwordlist=Importar archivo de _texto con una palabra por línea
 menu.importflexwordlist=Importar lista de palabras exportado del programa _FLEx (en forma tab-delimited)
-menu.importparatextwordlist=Importar lista de palabras exportado del programa _ParaTExt
-menu.importparatexthyphenatedwords=Importar el archivo _hyphenatedWords.txt del programa ParaTExt
+menu.importparatextwordlist=Importar lista de palabras exportado del programa _Paratext
+menu.importparatexthyphenatedwords=Importar el archivo _hyphenatedWords.txt del programa Paratext
 menu.exporthyphenatedwords=_Exportar Palabras con Guiones
 menu.exporthyphenatedwordsforindesign=Exportar para _InDesign (una lista)
-menu.exporthyphenatedwordsforparatext=Exportar para _ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenatedwordsforparatext=Exportar para _Paratext (hyphenatedWords.txt)
 menu.exporthyphenatedwordsforxlingpaper=Exportar para _XLingPaper (hyphenation exceptions file)
 menu.exporthyphenationparameters=Parámetros de Palabras con Guiones 
 menu.exporthyphenationparametersforindesign=Parámetros para InDesign (simple list)
-menu.exporthyphenationparametersforparatext=Parámetros para ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenationparametersforparatext=Parámetros para Paratext (hyphenatedWords.txt)
 menu.exporthyphenationparametersforxlingpaper=Parámetros para XLingPaper (hyphenation exceptions file)
 menu.exit=_Quitar
 menu.edit=_Editar
@@ -74,8 +74,8 @@ about.content=Un programa lingüístico para investigar sylabificación\ny proporci
 file.filterdescription=Archivos del programa Asheninka
 file.new=Nuevo Proyecto
 file.plainlistimportfilterdescription=Archivos simples
-file.paratexthyphenatedwordsfilterdescription=hyphenatedWords.txt archivo del programa ParaTExt
-file.paratextexportedwordlistfilterdescription=Archivos de lista de palabras exportados del programa ParaTExt
+file.paratexthyphenatedwordsfilterdescription=hyphenatedWords.txt archivo del programa Paratext
+file.paratextexportedwordlistfilterdescription=Archivos de lista de palabras exportados del programa Paratext
 file.exportedhyphenationlistfilterdescription=Archivos de separación silábica
 file.xlingpaperhyphenationexceptionfilterdescription=Archivos de excepciones de separación silábica para el programa XLingPaper 
 file.requiresaveheader=¡Importante!
@@ -158,7 +158,7 @@ label.righttoleft=Derecha a izquierda
 label.help=Ayuda
 label.hyphenationparameters=Parámetros de palabras con guiones para {0}
 label.hyphenationparametersindesign=InDesign (simple list)
-label.hyphenationparametersparatext=ParaTExt (hyphenatedWords.txt)
+label.hyphenationparametersparatext=Paratext (hyphenatedWords.txt)
 label.hyphenationparametersxlingpaper=XLingPaper (hyphenation exceptions file)
 label.discretionaryhyphen=Carácter(s) de guión discrecional:
 label.hyphenationstartsafter=El guión comienza después de muchos caracteres desde el principio:
@@ -199,7 +199,7 @@ label.languagename=Nombre del idioma:
 label.languagetouse=Idioma a utilizar:
 label.importing=Importar: 
 label.importingcanceled=Es: Importing canceled!
-label.importparatextcharacters=Importar segmentos (carácteres) desde ParaTExt 7 archivo .lds.\nEsto eliminará todos los segmentos actuales, incluyendo aquellos definidos en las Clases Naturales CV.\n\nLe sugerimos hacer una copia de seguridad antes de hacer esto.
+label.importparatextcharacters=Importar segmentos (carácteres) desde Paratext 7 archivo .lds.\nEsto eliminará todos los segmentos actuales, incluyendo aquellos definidos en las Clases Naturales CV.\n\nLe sugerimos hacer una copia de seguridad antes de hacer esto.
 label.importparatextcharacterserror=El archivo {0} no tenía ningún carácter definido. Error en la importación.
 label.backupnowbeforeclearcorrectsyllabification=¿Quieres hacer una copia de seguridad ahora?\n(Sí, le permitirá hacer una copia de seguridad y, a continuación, borrar las silabaciones correctas.\nNo borrará las silabaciones correctas sin realizar una copia de seguridad en primer lugar.\nCancelar la salida.)
 label.backupnowbeforeclearwords=¿Quieres hacer una copia de seguridad ahora?\n(Sí, te permitirá hacer una copia de seguridad y luego borrar las palabras.\nNo borrará las palabras sin hacer copias de seguridad primero.\nCancelar la salida.)
