--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -14,19 +14,19 @@ menu.projectmanagementbackup=_Saufgarder ce projet...
 menu.projectmanagementrestore=_Restaurer un projet...
 menu.importsegments=I_mporter segments
 menu.importflexphonemes=Importer segments (phonèmes) de la database _FLEx
-menu.importparatextcharacters=Importer segments (caractères) de fichier .lds _ParaTExt 7
+menu.importparatextcharacters=Importer segments (caractères) de fichier .lds _Paratext 7
 menu.importwords=_Importer mots
 menu.importplainwordlist=Importer _fichier texte un mot par ligne
 menu.importflexwordlist=Importer liste de mots exportée de _FLEx (délimitée par tabulation)
-menu.importparatextwordlist=Importer liste de mots exportée de _ParaTExt
-menu.importparatexthyphenatedwords=Importer fichier _hyphenatedWords.txt de ParaTExt
+menu.importparatextwordlist=Importer liste de mots exportée de _Paratext
+menu.importparatexthyphenatedwords=Importer fichier _hyphenatedWords.txt de Paratext
 menu.exporthyphenatedwords=_Exporter mots composés
 menu.exporthyphenatedwordsforindesign=Exporter pour _InDesign (liste simple)
-menu.exporthyphenatedwordsforparatext=Exporter pour _ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenatedwordsforparatext=Exporter pour _Paratext (hyphenatedWords.txt)
 menu.exporthyphenatedwordsforxlingpaper=Exporter pour _XLingPaper (fichier d\u2019exceptions de mots composés)
 menu.exporthyphenationparameters=Paramètres pour mots composés
 menu.exporthyphenationparametersforindesign=Paramètres pour InDesign (liste simple)
-menu.exporthyphenationparametersforparatext=Paramètres pour ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenationparametersforparatext=Paramètres pour Paratext (hyphenatedWords.txt)
 menu.exporthyphenationparametersforxlingpaper=Paramètres pour XLingPaper (fichier d\u2019exceptions de mots composés)
 menu.exit=_Quitter
 menu.edit=_Editer
@@ -74,8 +74,8 @@ about.content=Un logiciel linguistique pour explorer la syllabification et\npour
 file.filterdescription=fichiers Asheninka
 file.new=Nouveau projet
 file.plainlistimportfilterdescription=fichiers listes simples
-file.paratexthyphenatedwordsfilterdescription=fichiers ParaTExt hyphenatedWords.txt
-file.paratextexportedwordlistfilterdescription=fichiers ParaTExt liste de mots exportés
+file.paratexthyphenatedwordsfilterdescription=fichiers Paratext hyphenatedWords.txt
+file.paratextexportedwordlistfilterdescription=fichiers Paratext liste de mots exportés
 file.exportedhyphenationlistfilterdescription=fichiers d\u2019usage de traits d\u2019union
 file.xlingpaperhyphenationexceptionfilterdescription=fichiers XLingPaper d\u2019exceptions d\u2019usage des traits d\u2019union
 file.requiresaveheader=Important!
@@ -185,7 +185,7 @@ label.general=General
 label.help=Aide
 label.hyphenationparameters=Paramètres d\u2019usage de traits d\u2019union pour {0}
 label.hyphenationparametersindesign=InDesign (liste simple)
-label.hyphenationparametersparatext=ParaTExt (hyphenatedWords.txt)
+label.hyphenationparametersparatext=Paratext (hyphenatedWords.txt)
 label.hyphenationparametersxlingpaper=XLingPaper (fichier d\u2019exceptions d\u2019usage des traits d\u2019union)
 label.discretionaryhyphen=Trait(s) d\u2019union Discrétionnaire(s):
 label.hyphenationstartsafter=Usage des traits d\u2019union commence après tant de caractères depuis le début:
@@ -193,7 +193,7 @@ label.hyphenationstopsbefore=Usage des traits d\u2019union s\u2019arrête après t
 label.icurules=ICU rules to use :
 label.importing=Importation: 
 label.importingcanceled=Importation annulée!
-label.importparatextcharacters=Importer segments (caractères) de fichier ParaTExt 7 .lds.\nCeci enlèvera tous les segments actuels, y compris ceux définis pans les in the Classes Naturelles CV.\n\nOn vous conseille de faire une sauvegarde avant de faire ceci.
+label.importparatextcharacters=Importer segments (caractères) de fichier Paratext 7 .lds.\nCeci enlèvera tous les segments actuels, y compris ceux définis pans les in the Classes Naturelles CV.\n\nOn vous conseille de faire une sauvegarde avant de faire ceci.
 label.importparatextcharacterserror=Le fichier {0} n\u2019avait pas de caractères définis.  Echec d\u2019importation.
 label.backupnowbeforeclearcorrectsyllabification=Voulez-vous faire une sauvegarde maintenant?\n(Oui vous permettra de faire une sauvegarde et enlèvera ensuite les syllabifications correctes.\nNon enlèvera les syllabifications correctes sans faire une sauvegarde.\nAnnuler quittera.)
 label.backupnowbeforeclearwords=Voulez-vous faire une sauvegarde maintenant?\n(Oui vous permettra de faire une sauvegarde et enlèvera ensuite les mots.\nNon enlèvera les mots sans faire une sauvegarde.\nAnnuler quittera.)
