Report when an unexpected exception occurs

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -529,3 +529,9 @@ language.sortingoption.use_ldml_file=Use LDML file
 # Sonority Hierarchy errors
 sonorityhierarchyerror.duplicatesegmentsinhierarchy=The following segments are duplicated in some classes.\nEach segment should appear in one and only one class.
 sonorityhierarchyerror.missingsegmentsinhierarchy=The following segments are in the segment inventory but are not in any class.\nEvery segment should appear in one and only one class.
+
+# Exception labels
+exception.content=Please copy the exception information below, email it to asheninka_support_lsdev@sil.org along with a description of what you were doing.
+exception.header=A serious error happened.
+exception.label=The exception stacktrace was:
+exception.title=Error Found!
