--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -529,3 +529,9 @@ language.sortingoption.use_ldml_file=Usar archivo LDML
 # Sonority Hierarchy errors
 sonorityhierarchyerror.duplicatesegmentsinhierarchy=Los siguientes segmentos están duplicados en algunas clases.\nCada segmento debe aparecer en una y sólo una clase.
 sonorityhierarchyerror.missingsegmentsinhierarchy=Los siguientes segmentos están en el inventario de segmentos pero no están en ninguna clase.\nCada segmento debe aparecer en una y sólo una clase.
+
+# Exception labels
+exception.content=Por favor, copie la información de la excepción a continuación, envíela por correo electrónico a asheninka_support_lsdev@sil.org junto con una descripción de lo que estaba haciendo.
+exception.header=Ocurrió un grave error.
+exception.label=La excepción fue Stacktrace:
+exception.title=¡Error encontrado!
