Moraic approach, pass 1

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -133,6 +133,11 @@ onc.view.wordspredictedvscorrect=Predicted vs. Correct ONC Words
 onc.view.graphemenaturalclasses=Grapheme Natural Classes
 onc.view.environments=Environments
 
+moraic.view.templates=Moraic Templates
+moraic.view.filters=Moraic Filters
+moraic.view.words=Moraic Words
+moraic.view.wordspredictedvscorrect=Predicted vs. Correct Moraic Words
+
 # labels
 label.action=Action
 label.active=Active
@@ -281,6 +286,10 @@ label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
 label.codasallowed=Codas allowed
+label.moras=Moras born
+label.morasHeader=Moras
+label.maxmoras=Maximum moras per syllable
+label.weightbyposition=Use weight by position
 label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
 label.syllabificationparameters=Syllabification Parameters
@@ -473,6 +482,7 @@ report.tawshstartssyllable=Starts Syllable
 report.tawoncdetails=The details of the segment to natural class mappings, the sonority comparison between pairs of natural classes, and the parsing of onset/nucleus/coda is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
 report.tawoncstatus=Status
 report.tawonctype=Type
+report.tawmoraicdetails=The details of the segment to natural class mappings, the sonority comparison between pairs of natural classes, and the parsing of moras is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
