--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -127,11 +127,16 @@ onc.view.sonorityhierarchy.down=Mover Abajo
 onc.view.syllabificationparameters=Parámetros de silabeo
 onc.view.onsetprinciple=Onset Principle
 onc.view.templates=Plantillas del ONC
-onc.view.filters=Filtors del ONC
+onc.view.filters=Filtros del ONC
 onc.view.words=Palabras del ONC
-onc.view.wordspredictedvscorrect=Predicted vs Correct Son. Hier. Words
+onc.view.wordspredictedvscorrect=Predicho vs. Correcto Palabras del ONC
 onc.view.graphemenaturalclasses=Classes Naturales de Grafemas
 onc.view.environments=Entornos
+
+moraic.view.templates=Plantillas móricas
+moraic.view.filters=Filtros móricos
+moraic.view.words=Palabras móricas
+moraic.view.wordspredictedvscorrect=Predicho vs. Correcto Palabras Móricas
 
 #labels
 label.action=Acción
@@ -281,6 +286,10 @@ label.onsetHeader=O
 label.nucleusHeader=N
 label.codaHeader=C
 label.codasallowed=Codas allowed
+label.moras=Moras que lleva
+label.morasHeader=Moras
+label.maxmoras=Máximo de moras por sílaba
+label.weightbyposition=Usar el peso por la posición
 label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
 label.syllabificationparameters=Parámetros de silabeo
@@ -473,6 +482,7 @@ report.tawshstartssyllable=Comienza la sílaba
 report.tawoncdetails=Los detalles de las asignaciones de segmento a clase natural, la comparación de sonoridad entre pares de clases naturales y el análisis de onset / núcleo / coda se encuentran a continuación. Si un paso falló, está en {0}. De lo contrario está en {2}.
 report.tawoncstatus=Estado
 report.tawonctype=Tipo
+report.tawmoraicdetails=Los detalles de las asignaciones de segmento a clase natural, la comparación de sonoridad entre pares de clases naturales y el análisis de moras se encuentran a continuación. Si un paso falló, está en {0}. De lo contrario está en {2}.
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
