Make Try a Word work for non-filter/template parsing

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -348,6 +348,19 @@ label.oncstateonset=onset
 label.oncstateonsetornucleus=onset o núcleo
 label.oncstatetemplatefailed=plantilla fallida
 label.oncstateunknown=
+# Moraic Syllabification tracing info status messages
+label.moraicstiaddedasonsettosyllable=Añadido el segmento 1 como inicio directamente al nodo silábico
+label.moraicstiaddedwithmora=Añadido el segmento 1 con una mora
+label.moraicstiappendedtomora=Añadir el segmento 1 a la mora
+label.moraicstimaxmorasstartnewsyllable=Número máximo de moras en la sílaba encontrada; comienza una nueva sílaba
+label.moraicstiunknown=
+# Moraic Syllabification state
+label.moraicstatefilterfailed=filtro fallido
+label.moraicstatefilterrepairapplied=filtro aplicado
+label.moraicstatemora=mora añadió
+label.moraicstateonset=onset
+label.moraicstatetemplatefailed=plantilla fallida
+label.moraicstateunknown=
 
 # file loading/saving
 file.error=Error
