Add onset, word initial, and word final template handling to Moraic approach

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -351,8 +351,12 @@ label.oncstateunknown=
 # Moraic Syllabification tracing info status messages
 label.moraicstiaddedasonsettosyllable=Añadido el segmento 1 como inicio directamente al nodo silábico
 label.moraicstiaddedwithmora=Añadido el segmento 1 con una mora
+label.moraicstiaddedwithtwomoras=Añadido el segmento 1 con dos moras
+label.moraicstiaddedwiththreemoras=Añadido el segmento 1 con tres moras
 label.moraicstiappendedtomora=Añadir el segmento 1 a la mora
+label.moraicstiexpectedmoranotfound=Esperaba una mora pero no se encontró
 label.moraicstimaxmorasstartnewsyllable=Número máximo de moras en la sílaba encontrada; comienza una nueva sílaba
+label.moraicstinoninitialonsettemplatematchedstartnewsyllable=Plantilla de inicio no inicial coincidente; comienza una nueva sílaba
 label.moraicstiunknown=
 # Moraic Syllabification state
 label.moraicstatefilterfailed=filtro fallido
