--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -353,8 +353,12 @@ label.oncstateunknown=
 # Moraic Syllabification tracing info status messages
 label.moraicstiaddedasonsettosyllable=Added segment 1 as an onset directly to the syllable node
 label.moraicstiaddedwithmora=Added segment 1 with a mora
+label.moraicstiaddedwithtwomoras=Added segment 1 with two moras
+label.moraicstiaddedwiththreemoras=Added segment 1 with three moras
 label.moraicstiappendedtomora=Appended segment 1 to mora
+label.moraicstiexpectedmoranotfound=Expected a mora but it was not found
 label.moraicstimaxmorasstartnewsyllable=Maximum number of moras in syllable found; start a new syllable
+label.moraicstinoninitialonsettemplatematchedstartnewsyllable=Non-initial onset template matched; start a new syllable
 label.moraicstiunknown=
 # Moraic Syllabification state
 label.moraicstatefilterfailed=filter failed
