Add syllable template processing to Moraic approach

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -357,6 +357,8 @@ label.moraicstiappendedtomora=Añadir el segmento 1 a la mora
 label.moraicstiexpectedmoranotfound=Esperaba una mora pero no se encontró
 label.moraicstimaxmorasstartnewsyllable=Número máximo de moras en la sílaba encontrada; comienza una nueva sílaba
 label.moraicstinoninitialonsettemplatematchedstartnewsyllable=Plantilla de inicio no inicial coincidente; comienza una nueva sílaba
+label.moraicstisyllabletemplatefailed=No hay una plantilla de sílabas que coincida
+label.moraicstisyllabletemplatematched=Una plantilla de sílabas {0} coincide con esto: {1}
 label.moraicstiunknown=
 # Moraic Syllabification state
 label.moraicstatefilterfailed=filtro fallido
