Add moraic approach to syllabifications comparison.

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -460,7 +460,7 @@ report.shnaturalclasseswhichdiffer=Las siguientes clases naturales difieren entr
 report.shsonorityhierarchyorder=El orden de la jerarquía de sonoridad se muestra a continuación.
 report.syllabifications=Silabaciones
 report.samesyllabifications=Todas las palabras tienen las mismas sílabas.
-report.syllabificationswhichdiffer=Las siguientes palabras tienen diferentes sílabas.
+report.syllabificationswhichdiffer=Las siguientes palabras tienen diferentes sílabas.  El número de palabras que difieren es {0}.
 report.syllabificationstitle=Comparar enfoques de silabeo
 report.syllabificationscomparisonof=Comparación de los enfoques a la Sillabificación
 report.syllabificationfailed=falló
@@ -469,6 +469,9 @@ report.shapproachabbreviation=SH
 report.oncapproachabbreviation=ONC
 report.onctitle=Comparación del ONC Approach
 report.onccomparisonof=Comparación del ONC Approach entre
+report.moraicapproachabbreviation=Moraic
+report.moraictitle=Comparación del enfoque moraico
+report.moraiccomparisonof=Enfoque moraico Comparación entre:
 report.syllabificationparameters=Parámetros de silabeo
 report.sameonsetmaximization=La maximización de inicio es la misma.
 report.sameonsetprinciple=El principio de inicio es el mismo.
