--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -462,7 +462,7 @@ report.shnaturalclasseswhichdiffer= Les classes naturelles suivantes diffèrent e
 report.shsonorityhierarchyorder=The order of the sonority hierarchy is shown below.
 report.syllabifications=Syllabifications
 report.samesyllabifications=All the words have the same syllabifications.
-report.syllabificationswhichdiffer=The following words have different syllabifications.
+report.syllabificationswhichdiffer=The following words have different syllabifications.  The number of words which differ is {0}.
 report.syllabificationstitle=Compare syllabification approaches
 report.syllabificationscomparisonof=Comparison of approaches to syllabification
 report.syllabificationfailed=echec
@@ -471,6 +471,9 @@ report.shapproachabbreviation=SH
 report.oncapproachabbreviation=ONC
 report.onctitle=ONC Approach Comparison
 report.onccomparisonof=ONC Approach Comparison between:
+report.moraicapproachabbreviation=Moraic
+report.moraictitle=Moraic Approach Comparison
+report.moraiccomparisonof=Moraic Approach Comparison between:
 report.syllabificationparameters=Syllabification Parameters
 report.sameonsetmaximization=Onset maximization is the same.
 report.sameonsetprinciple=The onset principle is the same.
