Add comparison of moraic approach (one to another)

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -469,9 +469,13 @@ report.shapproachabbreviation=SH
 report.oncapproachabbreviation=ONC
 report.onctitle=Comparación del ONC Approach
 report.onccomparisonof=Comparación del ONC Approach entre
+report.onset=Onset
+report.nucleus=Núcleo
+report.coda=Coda
 report.moraicapproachabbreviation=Moraic
 report.moraictitle=Comparación del enfoque moraico
 report.moraiccomparisonof=Enfoque moraico Comparación entre:
+report.moras=Moras
 report.syllabificationparameters=Parámetros de silabeo
 report.sameonsetmaximization=La maximización de inicio es la misma.
 report.sameonsetprinciple=El principio de inicio es el mismo.
@@ -479,6 +483,10 @@ report.samecodasallowed=Codas permitidas son las mismas.
 report.codasalloweddiffers=Codas permitidas son diferentes.
 report.onsetmaximizationdiffers=La maximización de inicio es diferente.
 report.onsetprinciplediffers=El principio de inicio es diferente.
+report.sameweightbyposition=El peso por la posición es el mismo.
+report.useweightbypositiondiffers=El peso por la posición es diferente.
+report.samemaxmoras=El máximo de moras por sílaba es el mismo.
+report.maxmorasdiffers=El máximo de moras por sílaba es diferente.
 report.filters=Filtros
 report.samefilters=Ambos tienen los mismos filtros.
 report.filterswhichdiffer=Los siguientes filtros difieren entre los dos. 
