--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -471,9 +471,13 @@ report.shapproachabbreviation=SH
 report.oncapproachabbreviation=ONC
 report.onctitle=ONC Approach Comparison
 report.onccomparisonof=ONC Approach Comparison between:
+report.onset=Onset
+report.nucleus=Nucleus
+report.coda=Coda
 report.moraicapproachabbreviation=Moraic
 report.moraictitle=Moraic Approach Comparison
 report.moraiccomparisonof=Moraic Approach Comparison between:
+report.moras=Moras
 report.syllabificationparameters=Syllabification Parameters
 report.sameonsetmaximization=Onset maximization is the same.
 report.sameonsetprinciple=The onset principle is the same.
@@ -481,6 +485,10 @@ report.samecodasallowed=Codas allowed is the same.
 report.codasalloweddiffers=Codas allowed differs.
 report.onsetmaximizationdiffers=Onset maximization differs.
 report.onsetprinciplediffers=Onset principle differs.
+report.sameweightbyposition=Weight by position is the same.
+report.useweightbypositiondiffers=Weight by position differs.
+report.samemaxmoras=Maximum moras per syllable is the same.
+report.maxmorasdiffers=Maximum moras per syllable differs.
 report.filters=Filters
 report.samefilters=Both have the same filters.
 report.filterswhichdiffer=The following filters differ between the two.
